fix too large file input in chrome

--- a/frontend/styles/file_input.sass
+++ b/frontend/styles/file_input.sass
@@ -6,3 +6,6 @@
   width: 100%
   height: 100%
   cursor: pointer
+
+  &::-webkit-file-upload-button
+    display: none
